# python-keynote

./: .gitignore  README.md  notes.txt  pyproject.toml  pytest.ini
libs/pykeynote/: __init__.py  keynote_app.py  keynote_doc.py  keynote_image.py  keynote_layout.py  keynote_movie.py  keynote_process.py  keynote_shape.py  keynote_slide.py  keynote_text_item.py  keynote_theme.py  keynote_window.py
tests/: test_keynote_app.py  test_keynote_doc.py
tests/data/: test.key
trials/: keynote-appkit.py  keynote-scriptengine.py
