[tool.poetry]
name = "python-keynote"
version = "0.1.0"
description = "Interact with Apple Keynote application through python"
authors = ["Patrick Debois <Patrick.Debois@jedi.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
appscript = "^1.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
